@@ -1,9 +1,12 @@
 /*******************************************************************************
  * Copyright (c) 2010, 2017 Oak Ridge National Laboratory and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
+ *
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * https://www.eclipse.org/legal/epl-2.0/
+ * 
+ * SPDX-License-Identifier: EPL-2.0
  * Contributors:
  * 		Xihui Chen - initial API and implementation
  * 		Kay Kasemir (synchronization, STEP_HORIZONTALLY tweaks)
@@ -434,63 +437,58 @@ public class Trace extends Figure implements IDataProviderListener, IAxisListene
 			renderPointSize = pointSize;
 		}
 		// Shortcut when no point requested
-		if (pointStyle == PointStyle.NONE)
+		if (renderPointStyle == PointStyle.NONE) {
 			return;
+		}
 		graphics.pushState();
 		graphics.setBackgroundColor(renderColor);
 		graphics.setForegroundColor(renderColor); // Otherwise redraw does not
 													// affect lines
 		graphics.setLineWidth(1);
 		graphics.setLineStyle(SWTConstants.LINE_SOLID);
+		int halfSize = renderPointSize / 2;
 		switch (renderPointStyle) {
 		case POINT:
-			graphics.fillOval(new Rectangle(pos.x - renderPointSize / 2, pos.y - renderPointSize / 2, renderPointSize,
-					renderPointSize));
+			graphics.fillOval(new Rectangle(pos.x - halfSize, pos.y - halfSize, renderPointSize, renderPointSize));
 			break;
 		case CIRCLE:
-			graphics.drawOval(new Rectangle(pos.x - renderPointSize / 2, pos.y - renderPointSize / 2, renderPointSize,
-					renderPointSize));
+			graphics.drawOval(new Rectangle(pos.x - halfSize, pos.y - halfSize, renderPointSize, renderPointSize));
 			break;
 		case FILLED_CIRCLE:
-			graphics.fillOval(new Rectangle(pos.x - pointSize / 2, pos.y - pointSize / 2, pointSize, pointSize));
+			graphics.fillOval(new Rectangle(pos.x - halfSize, pos.y - halfSize, renderPointSize, renderPointSize));
 			break;
 		case TRIANGLE:
-			graphics.drawPolygon(new int[] { pos.x - renderPointSize / 2, pos.y + renderPointSize / 2, pos.x,
-					pos.y - renderPointSize / 2, pos.x + renderPointSize / 2, pos.y + renderPointSize / 2 });
+			graphics.drawPolygon(new int[] { pos.x - halfSize, pos.y + halfSize, pos.x, pos.y - halfSize,
+					pos.x + halfSize, pos.y + halfSize });
 			break;
 		case FILLED_TRIANGLE:
-			graphics.fillPolygon(new int[] { pos.x - renderPointSize / 2, pos.y + renderPointSize / 2, pos.x,
-					pos.y - renderPointSize / 2, pos.x + renderPointSize / 2, pos.y + renderPointSize / 2 });
+			graphics.fillPolygon(new int[] { pos.x - halfSize, pos.y + halfSize, pos.x, pos.y - halfSize,
+					pos.x + halfSize, pos.y + halfSize });
 			break;
 		case SQUARE:
-			graphics.drawRectangle(new Rectangle(pos.x - renderPointSize / 2, pos.y - renderPointSize / 2,
-					renderPointSize, renderPointSize));
+			graphics.drawRectangle(new Rectangle(pos.x - halfSize, pos.y - halfSize, renderPointSize, renderPointSize));
 			break;
 		case FILLED_SQUARE:
-			graphics.fillRectangle(new Rectangle(pos.x - renderPointSize / 2, pos.y - renderPointSize / 2,
-					renderPointSize, renderPointSize));
+			graphics.fillRectangle(new Rectangle(pos.x - halfSize, pos.y - halfSize, renderPointSize, renderPointSize));
 			break;
 		case BAR:
-			graphics.drawLine(pos.x, pos.y - renderPointSize / 2, pos.x, pos.y + renderPointSize / 2);
+			graphics.drawLine(pos.x, pos.y - halfSize, pos.x, pos.y + halfSize);
 			break;
 		case CROSS:
-			graphics.drawLine(pos.x, pos.y - renderPointSize / 2, pos.x, pos.y + renderPointSize / 2);
-			graphics.drawLine(pos.x - renderPointSize / 2, pos.y, pos.x + renderPointSize / 2, pos.y);
+			graphics.drawLine(pos.x, pos.y - halfSize, pos.x, pos.y + halfSize);
+			graphics.drawLine(pos.x - halfSize, pos.y, pos.x + halfSize, pos.y);
 			break;
 		case XCROSS:
-			graphics.drawLine(pos.x - renderPointSize / 2, pos.y - renderPointSize / 2, pos.x + renderPointSize / 2,
-					pos.y + renderPointSize / 2);
-			graphics.drawLine(pos.x + renderPointSize / 2, pos.y - renderPointSize / 2, pos.x - renderPointSize / 2,
-					pos.y + pointSize / 2);
+			graphics.drawLine(pos.x - halfSize, pos.y - halfSize, pos.x + halfSize, pos.y + halfSize);
+			graphics.drawLine(pos.x + halfSize, pos.y - halfSize, pos.x - halfSize, pos.y + halfSize);
 			break;
 		case DIAMOND:
-			graphics.drawPolyline(new int[] { pos.x, pos.y - renderPointSize / 2, pos.x - renderPointSize / 2, pos.y,
-					pos.x, pos.y + renderPointSize / 2, pos.x + renderPointSize / 2, pos.y, pos.x,
-					pos.y - renderPointSize / 2 });
+			graphics.drawPolyline(new int[] { pos.x, pos.y - halfSize, pos.x - halfSize, pos.y,
+					pos.x, pos.y + halfSize, pos.x + halfSize, pos.y, pos.x, pos.y - halfSize });
 			break;
 		case FILLED_DIAMOND:
-			graphics.fillPolygon(new int[] { pos.x, pos.y - renderPointSize / 2, pos.x - renderPointSize / 2, pos.y,
-					pos.x, pos.y + renderPointSize / 2, pos.x + renderPointSize / 2, pos.y });
+			graphics.fillPolygon(new int[] { pos.x, pos.y - halfSize, pos.x - halfSize, pos.y,
+					pos.x, pos.y + halfSize, pos.x + halfSize, pos.y });
 			break;
 		default:
 			break;
@@ -671,6 +669,9 @@ public class Trace extends Figure implements IDataProviderListener, IAxisListene
 
 				for (int i = startIndex; i <= endIndex; i++) {
 					ISample dp = traceDataProvider.getSample(i);
+					if (dp == null) {
+						continue;
+					}
 					final boolean dpInXRange = xAxis.getRange().inRange(dp.getXValue());
 					// Mark 'NaN' samples on X axis
 					final boolean valueIsNaN = Double.isNaN(dp.getYValue());
@@ -961,16 +962,16 @@ public class Trace extends Figure implements IDataProviderListener, IAxisListene
 							if (!use_advanced_graphics && predpPos.x() == dpPos.x()) {
 								// Stores bar line infomration in memory, and
 								// draw lines later.
-								Integer posX = new Integer(predpPos.x());
+								Integer posX = Integer.valueOf(predpPos.x());
 								Integer highY;
 								Integer lowY;
 
 								if (dpPos.y() > predpPos.y()) {
-									highY = new Integer(dpPos.y());
-									lowY = new Integer(predpPos.y());
+									highY = Integer.valueOf(dpPos.y());
+									lowY = Integer.valueOf(predpPos.y());
 								} else {
-									highY = new Integer(predpPos.y());
-									lowY = new Integer(dpPos.y());
+									highY = Integer.valueOf(predpPos.y());
+									lowY = Integer.valueOf(dpPos.y());
 								}
 
 								if (bottomPoints.containsKey(posX)) {
